--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,7 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.63",
         "symfony/stopwatch": "7.0.*",
         "symfony/web-profiler-bundle": "7.0.*"
     }
